app/assets/stylesheets/_hero.scss
/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
/* - - - - - - - - - - - - - - - - - - - - - - - -  Hero Section  - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */

.hero-title {
  position:absolute;
  cursor:default;
  text-align: center;
  padding:5px;
  left:0;
  width: 100%;
  margin: 0;
  padding: 0;
  top:20%;
  color:$white;
  z-index: 1;
  
  @include breakpoint(small) {
      top:10%;
  }

  @include breakpoint(medium) {
      top:20%;
  }

      h1 {
           font-size: 1.5rem;
           font-weight: 300;
           padding-right: 5%;
           padding-left: 5%;

           @include breakpoint(small) {
              font-size: 2rem;
              padding-top: 5%;
            }

            @include breakpoint(medium) {
              font-size: 3rem;
              padding-right: 0;
              padding-left: 0;
              padding-top: 0;
            }
      }

      h3 {
          font-size: 1rem;
          font-weight: 200;
          padding-right: 2%;
          padding-left: 2%;
          padding-top: 5%;
          display: none;

          @include breakpoint(medium) {
            font-size: 2rem;
            padding-right: 0;
            padding-left: 0;
            padding-top: 30px;
            display: inline-block;
          }
      }
}

.hero-phrase {
  position:absolute;
  cursor:default;
  text-align: center;
  padding:5px;
  left:0;
  width: 100%;
  margin: 0;
  padding: 0;
  top:40%;
  color:$white;
  
    @include breakpoint(small) {
              top:35%;
            }
  
      h1 {
           font-size: 2rem;
           font-weight: 200;
           
           @include breakpoint(small) {
              font-size: 3rem;
            }
  }
}

.hero-buttons {
  position: absolute;
  z-index:7;
  top:35%;
  width: 100%;

  @include breakpoint(medium) {
    top:65%;
  }
}

.mostliked-button,.mostrecent-button , .shuffle-button {
  font-size:1rem;
  position:relative;
  padding:5px;
  cursor:pointer;
  text-decoration:none;
  color:$white;
  border:2px solid $white;
  border-radius: 3px;
  margin-left: 0;
  
  &:hover {
    background-color: $white;
    color: #413186;
  }

  @include breakpoint(small) {
    font-size:1.5rem;
    padding:10px;
  }
}

.start-watching {
  font-size:2rem;
  width:100%;
  position:absolute;
  cursor:default;
  z-index:7;
  padding:5px;
  left:0;
  margin: 0;
  padding: 0;
  top:80%;
  color:$white;
  display: none;

  @include breakpoint(medium) {
    display: flex;
  }
}

.scroll-to-content {
  font-size:4rem;
  width:100%;
  position:absolute;
  text-align:center;
  z-index:7;
  padding:5px;
  left:0;
  margin: 0;
  padding: 0;
  top:85%;
  color:$white; 
  display: none;

  @include breakpoint(medium) {
    display: block;
  }
}

.scroll-arrow {
  cursor: pointer;
  padding: 10px;
  -webkit-animation: pulsate 2s ease-out;
  -webkit-animation-iteration-count: infinite; 
}

@-webkit-keyframes pulsate {
    0% {-webkit-transform: scale(1)}
    50% {-webkit-transform: scale(1.15)}
    100% {-webkit-transform: scale(1)}
}

.mostrecent-button ,  .shuffle-button{
  display:inline-block;
  float: left;
  margin: 5px;
}

.mostliked-button {
    display:inline-block;
    float: left;
}

@-webkit-keyframes wiggle {
  0% {
    -webkit-transform:translate(0,0);
  }
  50% {
    -webkit-transform:translate(10px,0);
  }
  100% {
    -webkit-transform:translate(0,0);
  }
}
 
.wiggle:hover {
  -webkit-animation: wiggle 0.25s 2;
}

@-webkit-keyframes shifty {
  0% {
    -webkit-transform:translate(0,0);
  }

  50% {
    -webkit-transform:translate(0,-45px);
  }

  100% {
    -webkit-transform:translate(0,0px);
  }
}

.home-like-section {
  position: relative;
}

.home-light-img {
  display: none;
  z-index:-1;
  right: 50px;
  position: absolute;
  height:50px;
}

.shifty:hover + .home-light-img {
  -webkit-animation: shifty 2s 1;
  display:block;
}

